nginx_yaml_files/overlays/dev/image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  template:
    spec:
      containers:
      - image: nginx:stable-alpine
        name: nginx
