nginx_yaml_files/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxingress
  namespace: dev2
spec:
  ingressClassName: nginx
  rules:
  - host: nginxtest-dev.locallab.local
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 8080
        path: /
        pathType: Prefix
